# otel-flask-example

./: .gitignore  README.md  main.py  o11y.py  pyproject.toml
